# gitbot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .goosehints  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITLAB_API_CONSOLIDATION_ANALYSIS.md  LICENSE  README.md  clippy_output.txt  clippy_output_2.txt  clippy_output_3.txt  test_output.txt  test_output_2.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
scripts/: README.md  test_update_test_config.sh  update_test_config.py
src/: config.rs  file_indexer.rs  file_indexer_simple_test.rs  file_indexer_test.rs  gitlab.rs  gitlab_ext.rs  handlers.rs  log_dedup.rs  main.rs  mention_cache.rs  models.rs  openai.rs  polling.rs  polling_test.rs  repo_context.rs  tools.rs  triage.rs
src/tests/: agents_md_perf_test.rs  config_tests.rs  file_indexer_perf_test.rs  file_indexer_search_test.rs  file_indexer_test.rs  file_indexer_tests.rs  gitlab_cache_test.rs  gitlab_ext_tests.rs  gitlab_tests.rs  handlers_tests.rs  mod.rs  openai_tests.rs  polling_optimization_test.rs  polling_perf_test.rs  polling_test.rs  polling_tests.rs  repo_context_perf_test.rs  repo_context_tests.rs  tool_use_tests.rs
