[package]
name = "gitbot"
version = "0.1.0"
edition = "2021"
description = "A GitLab bot that responds to mentions using AI"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.13", features = ["toml"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
base64 = "0.13"
chrono = { version = "0.4.41", features = ["serde"] }
gitlab = "0.19.0"

[dev-dependencies]
mockito = "1"
